# starter_template

./: .gitignore
backend_service/: .env.example  README.md  pyproject.toml
backend_service/src/modal_app/: __init__.py  common.py  discord.py  main.py  models.py  utils.py
frontend_service/: .env.example  bun.lockb  package.json  tsconfig.app.json
frontend_service/src/: App.tsx
frontend_service/src/components/: TechnicalIssuesChart.tsx
