[project]
name = "modal-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Sam Julien", email = "sam.julien@writer.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.6",
    "modal>=0.72.15",
    "openai>=1.59.9",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "sqlite-vec>=0.1.6",
]

[project.scripts]
modal-app = "modal_app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
