[project]
name = "modal-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Sam Julien", email = "sam.julien@writer.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.6",
    "modal>=0.72.15",
    "openai>=1.60.1",
    "pillow>=11.1.0",
    "pydantic>=2.10.5",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.20",
    "sentence-transformers>=3.4.0",
]

[project.scripts]
modal-app = "modal_app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
